optimised some pages

--- a/experiment-with-overflow.html
+++ b/experiment-with-overflow.html
@@ -58,8 +58,9 @@
   </div>
 
 
-  <p>В даному прикладі використовується overflow: auto, що дозволяє з'являтися прокрутці лише тоді, коли вміст перевищує
-    розміри контейнера.</p>
+  <p>В даному прикладі використовується overflow: auto, visible, hidden nf scroll, що описано та показано в кожному
+    блоці.
+  </p>
   <a href="/index.html">Головна сторінка</a>
 </body>
 
