--- a/pactice-with-float-and-clear.html
+++ b/pactice-with-float-and-clear.html
@@ -36,7 +36,8 @@
     nobis accusamus? Ea laborum officiis numquam molestiae ut ipsum? Eius culpa perferendis soluta atque unde quo
     necessitatibus alias labore.</div>
 
-  <div class="clear">блок з класом clear</div>
+  <div class="clear">блок з класом clear, який очищає float, вищче блоками clear(просто лінія) розділені блоки 1, 2 та 3
+  </div>
 
   <div class="box-4">Блок 4 (після очищення), та текст підним на новому рядку</div>
   <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur harum recusandae rem eius illo illum commodi
@@ -44,7 +45,7 @@
     excepturi dolore alias architecto unde repellat, totam quasi corrupti ducimus quaerat aliquam consectetur iure
     molestiae animi accusamus ab amet. Laborum aliquid, praesentium tempore possimus harum laudantium accusamus,
     consequuntur alias deserunt fugiat similique maxime!</div>
-  <div class="box">Блок 5 (після очищення)</div>
+
 
   <p class="description">У цьому прикладі три блоки, текст обтікає кожен блок з різних сторін. Після них ми
     використовуємо елемент з класом "clear", щоб очистити обтікання, що дозволяє наступним блокам починати новий рядок.
