--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <h1>Домашне завдання №7</h1>
   <div>
     <ul>
-      <li><a href="/blok-and-inline.html">Робота з блоковими та інлайновими елементами</a></li>
-      <li><a href="/normalize-and-reset.html">Нормалізація та скидання стилів</a></li>
-      <li><a href="/study-of-css-properties.html">Вивчення CSS властивостей</a></li>
-      <li><a href="/pactice-with-float-and-clear.html">Практика з float та clear</a></li>
-      <li><a href="/experiment-with-overflow.html">Експерименти з overflow</a></li>
-      <li><a href="/positioning-of-elements.html">Позиціонування елементів</a></li>
+      <li><a href="blok-and-inline.html">Робота з блоковими та інлайновими елементами</a></li>
+      <li><a href="normalize-and-reset.html">Нормалізація та скидання стилів</a></li>
+      <li><a href="study-of-css-properties.html">Вивчення CSS властивостей</a></li>
+      <li><a href="pactice-with-float-and-clear.html">Практика з float та clear</a></li>
+      <li><a href="experiment-with-overflow.html">Експерименти з overflow</a></li>
+      <li><a href="positioning-of-elements.html">Позиціонування елементів</a></li>
     </ul>
   </div>
 
