--- a/experiment-with-overflow.html
+++ b/experiment-with-overflow.html
@@ -61,7 +61,7 @@
   <p>В даному прикладі використовується overflow: auto, visible, hidden nf scroll, що описано та показано в кожному
     блоці.
   </p>
-  <a href="/index.html">Головна сторінка</a>
+  <a href="index.html">Головна сторінка</a>
 </body>
 
 </html>
