--- a/reset-css.html
+++ b/reset-css.html
@@ -14,7 +14,7 @@
   <h1>Ласкаво просимо до експерименту з Reset.css</h1>
   <p>Ця сторінка використовує Reset.css, який усуває всі стилі за замовчуванням браузера, вимагаючи визначити всі стилі
     з нуля.</p>
-  <a href="/normalize-and-reset.html">Назад</a>
+  <a href="normalize-and-reset.html">Назад</a>
 </body>
 
 </html>
