--- a/normalize-and-reset.html
+++ b/normalize-and-reset.html
@@ -9,8 +9,8 @@
 
 <body>
   <ul>
-    <li><a href="/normalize-page.html">Сторінка з normalize.css</a></li>
-    <li><a href="/reset-css.html">Сторінка з Reset.css</a></li>
+    <li><a href="normalize-page.html">Сторінка з normalize.css</a></li>
+    <li><a href="reset-css.html">Сторінка з Reset.css</a></li>
   </ul>
   <a href="index.html">Головна сторінка</a>
 </body>
