--- a/normalize-page.html
+++ b/normalize-page.html
@@ -14,7 +14,7 @@
   <h1>Ласкаво просимо до експерименту з Normalize.css</h1>
   <p>Ця сторінка використовує Normalize.css для збереження корисних стилів за замовчуванням, забезпечуючи
     консистентність між браузерами.</p>
-  <a href="/normalize-and-reset.html">Назад</a>
+  <a href="normalize-and-reset.html">Назад</a>
 </body>
 
 </html>
