--- a/pactice-with-float-and-clear.html
+++ b/pactice-with-float-and-clear.html
@@ -50,7 +50,7 @@
   <p class="description">У цьому прикладі три блоки, текст обтікає кожен блок з різних сторін. Після них ми
     використовуємо елемент з класом "clear", щоб очистити обтікання, що дозволяє наступним блокам починати новий рядок.
   </p>
-  <a href="/index.html">Головна сторінка</a>
+  <a href="index.html">Головна сторінка</a>
 </body>
 
 </html>
