--- a/positioning-of-elements.html
+++ b/positioning-of-elements.html
@@ -31,7 +31,7 @@
 
     <p style="height: 800px;">Цей текст використовується для створення простору для прокручування.</p>
   </div>
-  <a href="/index.html">Головна сторінка</a>
+  <a href="index.html">Головна сторінка</a>
 </body>
 
 </html>
