--- a/study-of-css-properties.html
+++ b/study-of-css-properties.html
@@ -24,7 +24,7 @@
 
   <p>Використання box-sizing: border-box дозволяє включати padding та border у загальну ширину та висоту елемента, що
     спрощує управління макетом.</p>
-  <a href="/index.html">Головна сторінка</a>
+  <a href="index.html">Головна сторінка</a>
 </body>
 
 </html>
